非推奨になっていたメソッドを別メソッドで代替した。